--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" type="image/svg+xml" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Bobbie Burnett Portfolio">
+    <meta name="description" content="Full Stack Web Developer Portfolio">
+    <meta name="keywords" content="web developer,  stack, design, technology, applications">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="Bobbie Burnett">
+
     <title>Bobbie Burnett · p o r t f o l i o</title>
   </head>
   <body>
